--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "babel-node": "babel-node --presets=latest",
+    "start": "yarn dev",
+    "server": "nodemon --exec yarn babel-node -- ./src/server/index.js",
     "unit": "jest --config test/unit/jest.conf.js",
     "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
+    "test": "yarn unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "build": "node build/build.js",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
     "@storybook/vue": "^3.3.9",
+    "babel-cli": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
+    "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "steem": "^0.6.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
