--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@storybook/vue": "^3.3.9",
     "babel-cli": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
     "steem": "^0.6.7",
